feat: Downgrade library compatibility from Java 11 to Java 8 (#4)